--- a/src/pages/contatti.astro
+++ b/src/pages/contatti.astro
@@ -44,7 +44,7 @@ const heroImg = `${base}images/pages/LF_Home2.png`;
         <p class="mt-4 font-semibold" style="color: var(--brand-dark);">
           Sedi
         </p>
-        <p>Roma e Bari · online</p>
+        <p>Roma · Bari · online</p>
       </div>
 
       <form
