--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,30 +12,30 @@ const base = import.meta.env.BASE_URL;
 				class="lf-footer__logo"
 				loading="lazy"
 			/>
-			<div>
+			<div class="lf-footer__links">
 				<p class="lf-footer__name">Lessico Familiare</p>
 				<p class="lf-footer__tagline">Studio di psicoterapia</p>
 			</div>
 		</div>
 
 		<div class="lf-footer__cols">
-			<div>
+			<div class="lf-footer__contact">
 				<p class="lf-footer__title">Contatti</p>
 				<a href="mailto:info@lessicofamiliare.it">info@lessicofamiliare.it</a>
 				<a href="tel:+390000000000">+39 000 000 0000</a>
-				<span>Roma e Bari · online</span>
+				<span>Roma e Bari - online</span>
 			</div>
-			<div>
+			<div class="lf-footer__links">
 				<p class="lf-footer__title">Link rapidi</p>
 				<a href="/chi-siamo">Chi siamo</a>
 				<a href="/metodo">Metodo</a>
 				<a href="/servizi">Servizi</a>
 				<a href="/blog">Blog</a>
 			</div>
-			<div>
+			<div class="lf-footer__social-col">
 				<p class="lf-footer__title">Social</p>
 				<div class="lf-footer__social">
-					<a href="#" target="_blank" rel="noreferrer" aria-label="Instagram">
+					<a href="https://www.instagram.com/lessicofamiliare_" target="_blank" rel="noreferrer" aria-label="Instagram">
 						<img
 							src={`${base}images/logo/Social/ig.png`}
 							alt=""
@@ -43,7 +43,7 @@ const base = import.meta.env.BASE_URL;
 							loading="lazy"
 						/>
 					</a>
-					<a href="#" target="_blank" rel="noreferrer" aria-label="Facebook">
+					<a href="https://www.facebook.com/profile.php?id=100063841042838" target="_blank" rel="noreferrer" aria-label="Facebook">
 						<img
 							src={`${base}images/logo/Social/fb.png`}
 							alt=""
@@ -104,9 +104,13 @@ const base = import.meta.env.BASE_URL;
 	.lf-footer__cols {
 		display: grid;
 		gap: 1.5rem;
+		grid-template-columns: 1fr auto;
 	}
-	.lf-footer__cols > div:not(:first-child) {
+	.lf-footer__links {
 		display: none;
+	}
+	.lf-footer__social-col {
+		justify-self: end;
 	}
 	.lf-footer__cols a,
 	.lf-footer__cols span {
@@ -125,8 +129,8 @@ const base = import.meta.env.BASE_URL;
 		margin-top: 0.35rem;
 	}
 	.lf-footer__social-icon {
-		width: 22px;
-		height: 22px;
+		width: 35px;
+		height: 35px;
 		display: block;
 		filter: brightness(0) invert(1);
 	}
@@ -171,8 +175,11 @@ const base = import.meta.env.BASE_URL;
 		.lf-footer__cols {
 			grid-template-columns: repeat(3, minmax(0, 1fr));
 		}
-		.lf-footer__cols > div:not(:first-child) {
+		.lf-footer__links {
 			display: block;
+		}
+		.lf-footer__social-col {
+			justify-self: start;
 		}
 		.lf-footer__bottom {
 			flex-direction: row;
@@ -184,3 +191,4 @@ const base = import.meta.env.BASE_URL;
 		}
 	}
 </style>
+
