Blog layout updates

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -51,7 +51,7 @@ const posts = (await getCollection("blog"))
   <Hero
     eyebrow=" "
     title="Blog"
-    subtitle="Articoli, materiali e tracce di lavoro."
+    subtitle="I rapporti umani: culture e percorsi di sviluppo"
     image={heroImg}
     imageAlt="Dettaglio di uno spazio di lavoro"
     align="left"
@@ -59,7 +59,7 @@ const posts = (await getCollection("blog"))
   />
 
   <section>
-    <BannerStrip title="SCOPRI TUTTI GLI ARTICOLI" />
+    <BannerStrip title="Articoli, materiali e tracce di lavoro" />
   </section>
 
   <section class="mt-10">
