--- a/src/pages/chi-siamo.astro
+++ b/src/pages/chi-siamo.astro
@@ -18,7 +18,8 @@ const profileOptBase = `${base}images/opt/V_MG_9796`;
     title="Chi siamo"
     subtitle=" "
     image={heroImg}
-    imagePosition="center 40%"
+    imagePositionD="center 40%"
+    imagePositionM="center 50%"
     imageAlt="Interno dello studio"
     cta={{ label: "Contattaci", href: "/contatti" }}
     align="left"
