--- a/src/pages/contatti.astro
+++ b/src/pages/contatti.astro
@@ -11,7 +11,7 @@ const heroImg = `${base}images/pages/LF_Contatti.png`;
   <Hero
     eyebrow=" "
     title="Contatti"
-    imagePosition="center 51%"
+    imagePositionD="center 51%"
     subtitle="Scrivici per informazioni e per costruire insieme il percorso giusto."
     image={heroImg}
     imageAlt="Dettaglio di uno spazio di lavoro"
