--- a/src/pages/metodo.astro
+++ b/src/pages/metodo.astro
@@ -15,6 +15,7 @@ const heroImg = `${base}images/pages/LF_Metodo.png`;
     eyebrow=" "
     title="Metodo"
     subtitle="Come lavoriamo insieme?"
+    imagePositionD="center 61%"
     image={heroImg}
     imageAlt="Dettaglio di strumenti di lavoro"
     cta={{ label: "Contattaci", href: "/contatti" }}
