--- a/src/pages/servizi/famiglia.astro
+++ b/src/pages/servizi/famiglia.astro
@@ -15,6 +15,7 @@ const heroImg = `${base}images/pages/LF_Servizi_Famiglia.png`;
   <Hero
     eyebrow=" "
     title="Famiglia"
+    imagePositionD="center 30%"
     subtitle="Servizi per lo sviluppo delle competenze ad apprendere nelle relazioni di bambini e giovani."
     image={heroImg}
     imageAlt="Dettaglio di uno spazio di lavoro"
