--- a/src/pages/servizi/scuole.astro
+++ b/src/pages/servizi/scuole.astro
@@ -15,6 +15,7 @@ const heroImg = `${base}images/pages/LF_Servizi_Scuola.png`;
   <Hero
     eyebrow=" "
     title="Scuole"
+    imagePositionD="center 30%"
     subtitle="Progetti e risorse per la promozione della convivenza scolastica e dei contesti di apprendimento."
     image={heroImg}
     imageAlt="Dettaglio di uno spazio di lavoro"
