--- a/src/pages/servizi/territori.astro
+++ b/src/pages/servizi/territori.astro
@@ -14,6 +14,7 @@ const heroImg = `${base}images/pages/LF_Servizi_Territorio.png`;
 >
   <Hero
     eyebrow=" "
+    imagePositionD="center 44%"
     title="Territori e organizzazioni"
     subtitle="Reti di prossimita tra cittadini e agenzie territoriali utili all'integrazione sociale."
     image={heroImg}
